applications/MaxKB/k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maxkb
  labels:
    app: maxkb
spec:
  selector:
    matchLabels:
      app: maxkb
  template:
    metadata:
      labels:
        app: maxkb
    spec:
      containers:
        - name: maxkb
          image: 1panel/maxkb:latest
          ports:
            - containerPort: 8080
              name: webui
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 4000m
              memory: 8Gi
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: maxkb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  labels:
    app: ollama
spec:
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
        - name: ollama
          image: ollama/ollama:latest
          ports:
            - containerPort: 11434
              name: api
              protocol: TCP
          resources:
            requests:
              cpu: 2000m
              memory: 4Gi
              nvidia.com/gpu: 1
            limits:
              cpu: 8000m
              memory: 16Gi
              nvidia.com/gpu: 1
          volumeMounts:
            - mountPath: /root/.ollama
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ollama
