applications/MaxKB/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: maxkb
  labels:
    app: maxkb
spec:
  ports:
    - port: 8080
      targetPort: webui
      protocol: TCP
  selector:
    app: maxkb
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  labels:
    app: ollama
spec:
  ports:
    - port: 11434
      targetPort: api
      nodePort: 31434
  selector:
    app: ollama
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: ollama-headless
  labels:
    app: ollama
spec:
  ports:
  - port: 11434
    name: api
  clusterIP: None
  selector:
    app: ollama
